--- a/booklist.css
+++ b/booklist.css
@@ -1,1 +1,14 @@
 /* CSS declarations go here */
+.container {
+    width: 50%;
+    margin: 0px auto;
+    margin-top: 50px;
+}
+.header {
+    width: 50%;
+    margin: 0px auto;
+}
+.input {
+    width: 100px;
+}
+
